crates/rattler_shell/src/snapshots/rattler_shell__activation__tests__test_nested_deactivation_second_roundnushell.snap
---
source: crates/rattler_shell/src/activation.rs
expression: script_contents
---
if ($env | get CONDA_ENV_SHLVL_2_TEST_VAR1?) {
                $env.TEST_VAR1 = $env.CONDA_ENV_SHLVL_2_TEST_VAR1
                $env = $env | reject CONDA_ENV_SHLVL_2_TEST_VAR1
            } else {
                $env = $env | reject TEST_VAR1
            }
if ($env | get CONDA_ENV_SHLVL_2_CONDA_PREFIX?) {
                $env.CONDA_PREFIX = $env.CONDA_ENV_SHLVL_2_CONDA_PREFIX
                $env = $env | reject CONDA_ENV_SHLVL_2_CONDA_PREFIX
            } else {
                $env = $env | reject CONDA_PREFIX
            }
$env.CONDA_SHLVL = "1"
